--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,4 +1,5 @@
 <!-- Full Body -->
+
 <div class="flex w-full h-full">
     <!-- image Div -->
     <div class="hidden md:block md:w-[45%]">
@@ -7,13 +8,13 @@
     <!-- content div -->
     <div class="flex flex-col w-full lg:w-[55%] h-full pt-10 px-10 md:px-20 lg:px-28 xl:px-48">
         <!-- Form -->
-        <form [formGroup]="registerForm" (submit)="registerUser()">
+        <form [formGroup]="loginForm" (submit)="login()">
             <div class="flex flex-col w-full items-center">
-                <h1 class="font-bold text-3xl mb-4">Create your Account</h1>
-                <div class="form_div">
-                    <label for="">Enter Full Name</label>
-                    <input class="border p-3 rounded-md" placeholder="Ugwumba ogechi" formControlName="name" type="text" required>
+                <div class="flex flex-col md:w-[100%] items-center">
+                    <h1 class="font-bold text-3xl mb-4">LogIn to your Account</h1>
+                    <span class="text-center text-gray-500">Sign in to your account and orders and payments seamlessly</span>
                 </div>
+               
                 <div class="form_div">
                     <label for="">Enter Your Email Address</label>
                     <input class="border p-3 rounded-md" placeholder="adazionp@gmail.com" formControlName="email" type="email" required>
@@ -27,7 +28,7 @@
                     <label for="">Remember me</label>
                 </div>
                 <div class="form_div">
-                    <button class="create_button bg-[#0F172A] text-white" type="submit">Create your Account</button>
+                    <button class="create_button bg-[#0F172A] text-white" type="submit">Sign In</button>
                 </div>
                 <div class="mt-3">
                     Or
@@ -35,12 +36,12 @@
                 <div class="form_div">
                     <button class="flex items-center justify-center space-x-3 create_button text-[#0F172A]">
                         <img src="../../../../assets/google.png" class="w-6" alt="">
-                        <span>Sign up with Google</span>
+                        <span>Sign in with Google</span>
                     </button>
                 </div>
-                <div class="w-full mt-6 justify-start flex-row space-x-1">
-                   <span class="text-gray-500 font-[400]"> Already have an account ? </span>
-                   <a routerLink="/login" routerLinkActive="active" class="hover:underline font-[500] hover:cursor-pointer">Sign in here</a>
+                <div class="flex w-full mt-6 justify-center lg:justify-start flex-row space-x-1">
+                   <span class="text-gray-500 font-[400]"> Don't have an account ? </span>
+                   <a routerLink="/signup" routerLinkActive="active" class="hover:underline font-[500] hover:cursor-pointer">Create a free account</a>
                 </div>
             </div>
         </form>
