--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -46,8 +46,13 @@
           </defs>
           </svg>
           </span>
-      <button class="hidden lg:block auth_button" type="button">SignUp</button>
-      <button class="hidden lg:block auth_button bg-black text-white" type="button">LogIn</button>
+      @if(isAuthenticated){
+        <button class="hidden lg:block auth_button" type="button">Welcome User</button>
+      }
+      @else {
+        <button class="hidden lg:block auth_button" type="button">SignUp</button>
+        <button class="hidden lg:block auth_button bg-black text-white" type="button">LogIn</button>  
+      }
       <span class="lg:hidden"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_63_2514)">
           <path d="M4 24H28V21.3333H4V24ZM4 17.3333H28V14.6667H4V17.3333ZM4 8V10.6667H28V8H4Z" fill="#0F172A"/>
