--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="form_div">
                 <button class="create_button flex justify-center space-x-4 bg-[#0F172A] text-white hover:bg-[#FAFAFA] hover:text-[#0F172A] hover:shadow-lg duration-300" type="submit">
-                    <div class="animate-spin rounded-full border-t-4 w-8 h-8"></div>
+                    <!-- <div class="animate-spin rounded-full border-t-4 w-8 h-8"></div> -->
                     <span>Sign In</span></button>
             </div>
             <div class="mt-3">
