--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -66,7 +66,7 @@
 </div>
 
   <!-- Content Div -->
-  <div class="flex px-1 lg:px-10 xl:px-20 w-full pt-4 space-x-8 items-center md:items-start">
+  <div class="flex px-1 lg:px-10 xl:px-10 w-full pt-4 space-x-5 lg:space-x-8 items-center md:items-start">
     <!-- Categories Div -->
     <div
       class="hidden md:w-[25%] p-0 shadow-lg md:p-2 lg:p-4 h-fit md:flex md:flex-col bg-[#0f172a08] space-y-6"
@@ -166,15 +166,15 @@
       </div>
     </div>
     <!-- Products Div -->
-    <div class="w-[95%] m-0 px-0 sm:px-15 md:w-[39%] md:px-1">
+    <div class="w-[95%] px-0 md:w-[45%]">
       <!-- List of Products -->
-      <div class="px-0 sm:px-1 lg:px-10 2xl:px-10">
+      <div class="px-0 sm:px-1 md:px-2 lg:px-6 2xl:px-10">
         @for(product of products; track product.id){
           <div
-            class="flex items-center justify-start md:justify-between space-x-0 sm:space-x-2 w-full border-b"
+            class="flex items-center justify-start md:justify-between space-x-0 sm:space-x-2 md:space-x-1 w-full border-b py-2 sm:py-1"
           >
             <!-- Food Image and Info -->
-            <div class="flex flex-row w-[65%] space-x-4 sm:space-x-1 xl:space-x-4 xl:w-3/4 items-center">
+            <div class="flex flex-row w-[60%] md:w-[70%] xl:w-3/4 space-x-3 sm:space-x-1 xl:space-x-4 sm:items-center">
               <img
                 class="product_image"
                 src="../../../assets/meal.png"
@@ -183,13 +183,13 @@
               <!-- Info -->
               <div class="flex flex-col">
                 <strong>{{ product.name }}</strong>
-                <div class="flex opacity-70 space-x-2 items-center">
+                <div class="flex opacity-70 space-x-8 md:space-x-4 items-center justify-center">
                   <span>Qty</span>
                   <span>
-                    <strong (click)="updateProductQuantity(product.id, false)" class="hover:cursor-pointer text-2xl"> - </strong>
+                    <strong (click)="updateProductQuantity(product.id, false)" class="hover:cursor-pointer text-3xl"> - </strong>
                     <span
                       ><input
-                        class="w-8 bg-gray-300 align-middle rounded-md p-1 px-2"
+                        class="w-8 bg-gray-300 align-middle rounded-md p-1 px-2 text-center"
                         min="1"
                         value={{product.orderQuantity}}
                         name=""
@@ -200,12 +200,12 @@
                   >
                 </div>
                 <div class="flex opacity-70 space-x-2">
-                  <span>Price</span> <span>{{ product.price }}</span>
+                  <span>Price</span> <span> ₦{{ product.price }}</span>
                 </div>
               </div>
             </div>
             <!-- Add To Cart -->
-            <div class="flex w-[35%] justify-end pr-3 sm:pr-1 sm:1/2 xl:w-1/4">
+            <div class="flex w-[40%] justify-end pr-1 sm:w-1/2 xl:w-1/4">
               <button
                 (click)="addToCart(product)"
                 style="background-color: #0f172a"
@@ -223,7 +223,7 @@
 
     <!-- My Cart -->
     <div
-      class="hidden md:flex md:flex-col md:w-[32%] lg:w-[28%] shadow-lg md:p-1 lg:p-4 bg-[#0f172a08] space-y-6"
+      class="hidden md:flex m-0 md:flex-col md:w-[36%] lg:w-[28%] shadow-lg md:p-1 lg:p-4 bg-[#0f172a08] space-y-6"
     >
       <div class="flex flex-col space-y-3">
         <span class="font-bold">My Cart ({{cartCount}})</span>
@@ -289,5 +289,22 @@
       </div>
       </div>
     </div>
+ 
+    <!-- Floating Cart -->
+      <div class="bg-[hsl(222,47%,11%)] fixed p-4 rounded-full right-[50px] bottom-10 z-50 hover:p-5 duration-100 shadow-2xl">
+        <!-- <div class="absolute bg-red-600 rounded-full bottom-6 px-0.5 right-1">2</div> -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+          <g clip-path="url(#clip0_226_3727)">
+            <path d="M7.49984 18.3334C7.96007 18.3334 8.33317 17.9603 8.33317 17.5001C8.33317 17.0398 7.96007 16.6667 7.49984 16.6667C7.0396 16.6667 6.6665 17.0398 6.6665 17.5001C6.6665 17.9603 7.0396 18.3334 7.49984 18.3334Z" stroke="#FAFAFA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M16.6668 18.3334C17.1271 18.3334 17.5002 17.9603 17.5002 17.5001C17.5002 17.0398 17.1271 16.6667 16.6668 16.6667C16.2066 16.6667 15.8335 17.0398 15.8335 17.5001C15.8335 17.9603 16.2066 18.3334 16.6668 18.3334Z" stroke="#FAFAFA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M0.833496 0.833252H4.16683L6.40016 11.9916C6.47637 12.3752 6.68509 12.7199 6.98978 12.9652C7.29448 13.2104 7.67574 13.3407 8.06683 13.3333H16.1668C16.5579 13.3407 16.9392 13.2104 17.2439 12.9652C17.5486 12.7199 17.7573 12.3752 17.8335 11.9916L19.1668 4.99992H5.00016" stroke="#FAFAFA" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_226_3727">
+              <rect width="20" height="20" fill="white"/>
+            </clipPath>
+          </defs>
+        </svg>
+      </div>
   </div>
 </div>
