--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -40,7 +40,7 @@
             </div> -->
             <div class="flex w-full mt-6 justify-center lg:justify-start flex-row space-x-1">
                <span class="text-gray-500 font-[400]"> Don't have an account ? </span>
-               <a routerLink="/signup" routerLinkActive="active" class="hover:underline font-[500] hover:cursor-pointer">Create a free account</a>
+               <a routerLink="/register" routerLinkActive="active" class="hover:underline font-[500] hover:cursor-pointer">Create a free account</a>
             </div>
         </div>
     </form>
