--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,67 @@
-<p>home works!</p>
+<div class="px-6 md:px-32 pt-8 md:pt-12">
+  <!-- Top Div -->
+  <div class="flex flex-col-reverse md:flex-row">
+<!-- Wording DIV -->
+    <div class="flex flex-col md:w-2/3 lg:w-[60%] space-y-5 md:space-y-10">
+        <div class="flex flex-col text-[35px] md:text-[75px] font-bold">
+            <span>Order Your <span class="text-[#B60803]">Favorite</span></span>
+            <span class="-mt-3 md:-mt-2"> Meals here</span>
+        </div>
+     <span class="font-normal text-[21px] text-[#4B5262]"
+        >Start Ordering your tasty and favourite food. There you go, you just
+        started an amazing delicious journey of non-ending taste</span
+      >
+      <button
+        class="flex justify-center border space-x-2 bg-[#0F172A] w-full md:w-[55%] lg rounded-3xl py-4 md:py-3 px-1 text-white"
+      >
+        <span>Place an Order now</span>
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M7 17L17 7"
+            stroke="white"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <path
+            d="M7 7H17V17"
+            stroke="white"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </button>
+    </div>
+    <!-- Image Div -->
+    <div>
+        second
+    </div>
+  </div>
+
+  <!-- Bottom Divs -->
+  <div class="flex justify-between mt-20 font-semibold text-2xl text-[#1A1B1F]">
+    <span>Top Restaurants</span>
+    <span>View All</span>
+  </div>
+  <!-- Restaurants -->
+  <div class="flex">
+    <div class="w-[200px] h-[192px] rounded-md shadow-xl mt-5">
+        <!-- Image -->
+        <div class="flex h-[60%]">
+            <img class="object-cover rounded-t-md" src="../../../assets/kjaro.png" alt="">
+        </div>
+        <!-- Info -->
+        <div class="flex flex-col text-[#0F172A] px-2 py-1">
+            <span class="text-base font-semibold ">Kilimanjaro</span>
+            <span class="text-sm opacity-50 font-normal">Operates within the Quick Service Restaurant</span>
+        </div>
+    </div>
+  </div>
+</div>
