--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,11 @@
-<div class="px-6 md:px-32 pt-8 md:pt-12">
+<div class="px-6 md:px-20 lg:px-24 pt-12 lg:pt-5">
   <!-- Top Div -->
   <div class="flex flex-col-reverse md:flex-row">
 <!-- Wording DIV -->
-    <div class="flex flex-col md:w-2/3 lg:w-[60%] space-y-5 md:space-y-10">
-        <div class="flex flex-col text-[35px] md:text-[75px] font-bold">
+    <div class="flex flex-col md:w-2/3 lg:w-[60%] space-y-5 2xl:space-y-10">
+        <div class="flex flex-col text-[35px] md:text-[55px] xl:text-[65px]  font-bold">
             <span>Order Your <span class="text-[#B60803]">Favorite</span></span>
-            <span class="-mt-3 md:-mt-2"> Meals here</span>
+            <span class="-mt-3 md:-mt-6"> Meals here</span>
         </div>
      <span class="font-normal text-[21px] text-[#4B5262]"
         >Start Ordering your tasty and favourite food. There you go, you just
@@ -41,12 +41,12 @@
     </div>
     <!-- Image Div -->
     <div>
-        second
+        
     </div>
   </div>
 
   <!-- Bottom Divs -->
-  <div class="flex justify-between mt-20 font-semibold text-2xl text-[#1A1B1F]">
+  <div class="flex justify-between mt-10 xl:mt-8 font-semibold text-2xl text-[#1A1B1F]">
     <span>Top Restaurants</span>
     <span>View All</span>
   </div>
